<resources>
    <string name="app_name">Dieta do Tola</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTRAR</string>
    <string name="forgot_password">Esqueceu a senha ? clica aqui !</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_apelido">Digite seu apelido</string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="digite_seu_celular">Digite seu celular</string>
    <string name="botao_cadastrar">CADASTRAR</string>
    <string name="perfil">Perfil</string>
    <string name="monta_dieta">Calcula dieta</string>
    <string name="dieta_pronta">Dietas</string>
    <string name="preencha_campos">PREENCHA OS CAMPOS</string>
    <string name="masculino">MASCULINO</string>
    <string name="feminino">FEMININO</string>
    <string name="idade">IDADE:</string>
    <string name="altura">ALTURA EM CENTIMETROS:</string>
    <string name="peso">PESO:</string>
    <string name="resultado">CALCULAR TDEE</string>
    <string name="emagrecimento">EMAGRECIMENTO</string>
    <string name="ganhoDePeso">Ganho de Peso</string>
    <string name="objetivo">QUAL SEU OBJETIVO ?</string>
    <string name="proximaPagina">PROXIMA</string>
    <string name="escolha_alimentos">ESCOLHA OS ALIMENTOS</string>
    <string name="carboidratos">CARBOIDRATOS</string>
    <string name="proteinas">PROTEINAS</string>
    <string name="atividade">PRATICA ALGUMA ATIVIDADE ?</string>
    <string name="atividade_grau">1-Sedentário   2-Leve   3-Moderado   4-Muito ativo   5-Extremamente ativo</string>
    <string name="estado_atual">SEU ESTADO ATUAL</string>
    <string name="estado_atual_grau">1-Magro   2-Atlético   3-Acima do peso   4-Obeso   </string>
    <string name="qtd_refeicoes">QUANTAS REFEIÇOES AO DIA ?</string>
    <string name="frutas">FRUTAS</string>
    <string name="gerar_dieta">MONTAR DIETA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="legumes">LEGUMES</string>
    <string name="caf_da_manh">CAFÉ DA MANHÃ</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="dietas">DIETA</string>
</resources>