<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_dieta" />

    <EditText
        android:id="@+id/email_login"
        style="@style/edittext_style"
        android:hint="@string/digite_seu_email"
        android:fontFamily="@font/font_dietola"
        android:drawableEnd="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"/>

    <EditText
        android:id="@+id/senha_login"
        style="@style/edittext_style"
        android:hint="@string/digite_sua_senha"
        android:fontFamily="@font/font_dietola"
        android:drawableEnd="@drawable/ic_senha"
        android:inputType="numberPassword"
        android:background="@drawable/edittext_background"
        android:layout_marginTop="20dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/progress_bar_white"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@id/senha_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botao_entrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/font_dietola"
            android:textSize="16sp"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/color_button2_selector"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="13dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/texto_cadastro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/font_dietola"
            android:textSize="16sp"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/color_button2_selector"
            android:padding="12dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/font_dietola"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/cinza"
        android:layout_marginTop="20dp"/>

</LinearLayout>