<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_alimentos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.Alimentos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-121dp">

        <TextView
            android:id="@+id/text_alimentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/font_dietola"
            android:text="@string/escolha_alimentos"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_carboidratos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/carboidratos"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_alimentos" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_carbo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_carboidratos" />

        <TextView
            android:id="@+id/text_proteinas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/proteinas"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_carbo" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_proteinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_proteinas" />

        <TextView
            android:id="@+id/text_frutas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/frutas"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_proteinas" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_frutas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_frutas" />

        <TextView
            android:id="@+id/text_legumes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/legumes"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_frutas" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_vegetais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_legumes" />

        <TextView
            android:id="@+id/text_qtd_refeicoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_dietola"
            android:text="@string/qtd_refeicoes"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_vegetais" />

        <RadioGroup
            android:id="@+id/radioGroupRefeicoes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_qtd_refeicoes">

            <RadioButton
                android:id="@+id/radio_refeicoes_1"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_1"/>
            <RadioButton
                android:id="@+id/radio_refeicoes_2"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_2"/>
            <RadioButton
                android:id="@+id/radio_refeicoes_3"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_3"/>
            <RadioButton
                android:id="@+id/radio_refeicoes_4"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_4"/>
            <RadioButton
                android:id="@+id/radio_refeicoes_5"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_5"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/irPaginaDieta"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/color_button2_selector"
            android:padding="5dp"
            android:text="@string/gerar_dieta"
            android:fontFamily="@font/font_dietola"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/radioGroupRefeicoes"
            app:layout_constraintStart_toStartOf="@id/radioGroupRefeicoes"
            app:layout_constraintTop_toBottomOf="@id/radioGroupRefeicoes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>