<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_calcula_dieta"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CalculaDieta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-121dp">

        <TextView
            android:id="@+id/text_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/preencha_campos"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_botao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_titulo"
            app:singleSelection="true">

            <Button
                android:id="@+id/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:fontFamily="@font/font_dietola"/>

            <Button
                android:id="@+id/feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:fontFamily="@font/font_dietola"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:id="@+id/linear_layout_idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton">

        <TextView
            android:id="@+id/text_idade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/idade"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/numero_idade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/slider_idade"
            style="@style/CustomSlider"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:progress="10"
            android:max="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_idade"/>

        <LinearLayout
            android:id="@+id/linear_layout_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_idade">

        <TextView
            android:id="@+id/text_altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/altura"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp" />

            <TextView
                android:id="@+id/numero_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_dietola"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/slider_altura"
            style="@style/CustomSlider"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:progress="100"
            android:max="300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_altura"/>

        <LinearLayout
            android:id="@+id/linear_layout_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_altura">

        <TextView
            android:id="@+id/text_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/peso"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"/>

            <TextView
                android:id="@+id/numero_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_dietola"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/slider_peso"
            style="@style/CustomSlider"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:progress="20"
            android:max="300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_peso"/>

        <TextView
            android:id="@+id/text_atividade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atividade"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_peso" />

        <TextView
            android:id="@+id/text_atividade_grau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/atividade_grau"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_atividade" />

        <RadioGroup
            android:id="@+id/radioGroupAtividade"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_atividade_grau">

            <RadioButton
                android:id="@+id/radio_atividade_1"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_1"/>
            <RadioButton
                android:id="@+id/radio_atividade_2"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_2"/>
            <RadioButton
                android:id="@+id/radio_atividade_3"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_3"/>
            <RadioButton
                android:id="@+id/radio_atividade_4"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_4"/>
            <RadioButton
                android:id="@+id/radio_atividade_5"
                style="@style/texto_radio_button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/_5"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayoutValores"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupAtividade">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botao_resultado"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="8dp"
                android:visibility="invisible"
                android:background="@drawable/shape_botao_selecionado"
                android:text="@string/resultado"
                android:fontFamily="@font/font_dietola"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/resultado"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/font_dietola"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_objetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/objetivo"
            android:fontFamily="@font/font_dietola"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutValores" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonObjetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_botao"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_objetivo"
            app:singleSelection="true">

            <Button
                android:id="@+id/emagrecimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emagrecimento"
                android:fontFamily="@font/font_dietola"/>

            <Button
                android:id="@+id/ganhoDePeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganhoDePeso"
                android:fontFamily="@font/font_dietola"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proximaPagina"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/color_button2_selector"
            android:padding="5dp"
            android:text="@string/proximaPagina"
            android:fontFamily="@font/font_dietola"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/toggleButtonObjetivo"
            app:layout_constraintStart_toStartOf="@id/toggleButtonObjetivo"
            app:layout_constraintTop_toBottomOf="@id/toggleButtonObjetivo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>